# bpm_key_recognize

./: .gitignore  README.md  pyproject.toml
bpmkey/: audio.py  bpm.py  cli.py  key.py
web/: app.js  index.html  styles.css
