[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bpm-key-recognize"
version = "0.1.0"
description = "CLI tool to detect BPM and musical key from audio files using librosa (with optional Essentia)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "qaaph-zyld" }]
dependencies = [
  "librosa>=0.10.1",
  "numpy>=1.23",
  "scipy>=1.10",
  "soundfile>=0.12",
  "click>=8.1.3",
]

[project.optional-dependencies]
essentia = ["essentia>=2.1b6"]

[project.urls]
Homepage = "https://github.com/qaaph-zyld/bpm_key_recognize"

[project.scripts]
bpmkey = "bpmkey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bpmkey"]

[tool.hatch.build.targets.sdist]
include = [
  "/bpmkey",
  "/README.md",
  "/LICENSE",
]
